AC_INIT([analysis], [0.1], [frank@uvic.ca])
#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.9 -Wall no-define])
AC_CONFIG_SRCDIR([src/analysis.cxx])
AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
